# project-zyheeda-bevy

./: .coderabbit.yaml  .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  codebook.toml  md
src/plugins/agents/: Cargo.toml
src/plugins/agents/src/: assets.rs  components.rs  lib.rs  observers.rs  system_params.rs  systems.rs
src/plugins/agents/src/assets/: agent.rs  agent_config.rs  agent_meta.rs
src/plugins/agents/src/components/: actions.rs  agent.rs  agent_config.rs  animate_idle.rs  attack_movement.rs  enemy.rs  insert_agent_default_loadout.rs  movement_config.rs  player.rs  player_camera.rs  player_movement.rs  register_agent_loadout_bones.rs  skill_animation.rs
src/plugins/agents/src/observers/: agent.rs  agent_config.rs
src/plugins/agents/src/resources/: cam_ray.rs  mouse_hover.rs
src/plugins/agents/src/system_params/: agent_param.rs  player_param.rs
src/plugins/agents/src/systems/: agent.rs  agent_config.rs  enemy.rs  insert_default_loadout.rs  load_agent.rs  player.rs  register_loadout_bones.rs  set_cam_ray.rs  set_mouse_hover.rs  toggle_walk_run.rs
src/plugins/animations/: Cargo.toml
src/plugins/animations/src/: animation.rs  animation_keys.rs  components.rs  lib.rs  observers.rs  resource.rs  systems.rs  test_tools.rs  traits.rs
src/plugins/animations/src/components/: animation_dispatch.rs  animation_lookup.rs  changed_animations.rs  current_forward_pitch.rs  current_movement_direction.rs  just_stopped_animations.rs  movement_direction.rs  setup_animations.rs  tail.rs
src/plugins/animations/src/observers/: insert_setup_animations.rs
src/plugins/animations/src/system_params/: animations.rs
src/plugins/animations/src/systems/: active_animation.rs  apply_seek_times.rs  discover_animation_mask_bones.rs  dispatch_player_components.rs  flush.rs  idle_animation.rs  init_animation_bone_groups.rs  init_animation_clips.rs  init_animation_components.rs  init_animation_graph.rs  init_animation_mask.rs  init_animation_player_components.rs  init_player_components.rs  link_animator.rs  load_animation_clip.rs  load_animations.rs  mask_all_bits_on_add.rs  mask_animation_nodes.rs  play_animation_clip.rs  play_animation_clip2.rs  (+11 more)
src/plugins/bars/: Cargo.toml
src/plugins/bars/src/: components.rs  lib.rs  systems.rs  traits.rs
src/plugins/behaviors/: Cargo.toml
src/plugins/behaviors/src/: animation.rs  components.rs  events.rs  input.rs  lib.rs  system_param.rs  systems.rs  tools.rs  traits.rs
src/plugins/camera_control/: Cargo.toml
src/plugins/camera_control/src/: components.rs  lib.rs  systems.rs  traits.rs
src/plugins/common/: Cargo.toml
src/plugins/common/src/: attributes.rs  blocker.rs  bundles.rs  components.rs  dto.rs  effects.rs  error_logger.rs  errors.rs  events.rs  folder_asset_loader.rs  labels.rs  lib.rs  observers.rs  resources.rs  states.rs  system_params.rs  systems.rs  test_tools.rs  tools.rs  traits.rs  zyheeda_commands.rs
src/plugins/game_state/: Cargo.toml
src/plugins/game_state/src/: lib.rs  resources.rs  states.rs  systems.rs
src/plugins/interactions/: Cargo.toml
src/plugins/interactions/src/: components.rs  events.rs  lib.rs  observers.rs  resources.rs  systems.rs  traits.rs
src/plugins/items/: Cargo.toml
src/plugins/items/src/: components.rs  item.rs  lib.rs  traits.rs
src/plugins/life_cycles/: Cargo.toml
src/plugins/life_cycles/src/: components.rs  lib.rs  systems.rs
src/plugins/light/: Cargo.toml
src/plugins/light/src/: components.rs  lib.rs  observers.rs  system_params.rs  systems.rs  traits.rs
src/plugins/loading/: Cargo.toml
src/plugins/loading/src/: asset_loader.rs  folder_asset_loader.rs  lib.rs  resources.rs  states.rs  systems.rs  traits.rs
src/plugins/localization/: Cargo.toml
src/plugins/localization/src/: assets.rs  lib.rs  resources.rs  systems.rs  tools.rs  traits.rs
src/plugins/map_generation/: Cargo.toml
src/plugins/map_generation/src/: cell_grid_size.rs  components.rs  errors.rs  graph.rs  grid_graph.rs  half_offset_grid.rs  lib.rs  line_wide.rs  map.rs  map_cells.rs  map_loader.rs  mesh_grid_graph.rs  observers.rs  parsers.rs  resources.rs  square_grid_graph.rs  system_params.rs  systems.rs  tools.rs  traits.rs  types.rs
src/plugins/menu/: Cargo.toml
src/plugins/menu/src/: components.rs  debug.rs  events.rs  lib.rs  observers.rs  resources.rs  states.rs  systems.rs  testing.rs  tools.rs  traits.rs
src/plugins/physics/: Cargo.toml
src/plugins/physics/src/: app.rs  components.rs  debug.rs  events.rs  lib.rs  messages.rs  observers.rs  physics_hooks.rs  resources.rs  system_params.rs  systems.rs  tests.rs  traits.rs
src/plugins/player/: Cargo.toml
src/plugins/player/src/: bundle.rs  components.rs  lib.rs  resources.rs  systems.rs  traits.rs
src/plugins/prefabs/: Cargo.toml
src/plugins/prefabs/src/: components.rs  lib.rs  systems.rs  traits.rs
src/plugins/savegame/: Cargo.toml
src/plugins/savegame/src/: context.rs  errors.rs  file_io.rs  lib.rs  resources.rs  systems.rs  traits.rs  writer.rs
src/plugins/settings/: Cargo.toml
src/plugins/settings/src/: lib.rs  resources.rs  systems.rs  traits.rs
src/plugins/skills/: Cargo.toml
src/plugins/skills/src/: behaviors.rs  bundles.rs  components.rs  folder_asset_loader.rs  item.rs  items.rs  lib.rs  observers.rs  resources.rs  skill.rs  skill_loader.rs  skills.rs  states.rs  system_parameters.rs  systems.rs  test_tools.rs  tools.rs  traits.rs
src/zyheeda_core/: Cargo.toml
src/zyheeda_core/src/: collections.rs  errors.rs  lib.rs  logger.rs  macros.rs  math.rs  prelude.rs  serialization.rs  strings.rs  tests.rs  write_iter.rs  yields.rs
src/zyheeda_core/src/collections/: is_empty.rs  iterate.rs  ordered.rs  ordered_hash_map.rs  ring_buffer.rs  sorted.rs  sorted_vec.rs
src/zyheeda_core/src/macros/: all.rs  any.rs  none.rs  write_iter.rs
src/zyheeda_core/src/math/: f32_finite.rs  f32_not_nan.rs
src/zyheeda_core/src/serialization/: as_vec.rs
src/zyheeda_core/src/strings/: normalized_name.rs
src/zyheeda_core/src/tests/: derive_in_between.rs  derive_in_range.rs
(+2482 files in other folders)
