[workspace]
members = ["src/plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# external
bevy = { version = "0.16.0", features = ["serialize"] }
bevy-inspector-egui = "0.31.0"
bevy_rapier3d = "0.30.0"
fluent = "0.16.1"
fluent-syntax = "0.11.1"
mockall = "=0.13.1"
serde = "1.0.219"
serde_json = "1.0.140"
tracing = "0.1.41"
unic-langid = { version = "0.9.6", features = ["macros"] }
uuid = "1.16.0"
test-case = "3.3.1"

# internal
animations = { path = "src/plugins/animations" }
bars = { path = "src/plugins/bars" }
behaviors = { path = "src/plugins/behaviors" }
camera_control = { path = "src/plugins/camera_control" }
common = { path = "src/plugins/common" }
enemy = { path = "src/plugins/enemy" }
frame_limiter = { path = "src/plugins/frame_limiter" }
game_state = { path = "src/plugins/game_state" }
interactions = { path = "src/plugins/interactions" }
children_assets_dispatch = { path = "src/plugins/children_assets_dispatch" }
items = { path = "src/plugins/items" }
life_cycles = { path = "src/plugins/life_cycles" }
light = { path = "src/plugins/light" }
loading = { path = "src/plugins/loading" }
localization = { path = "src/plugins/localization" }
macros = { path = "src/plugins/macros" }
map_generation = { path = "src/plugins/map_generation" }
menu = { path = "src/plugins/menu" }
path_finding = { path = "src/plugins/path_finding" }
player = { path = "src/plugins/player" }
prefabs = { path = "src/plugins/prefabs" }
graphics = { path = "src/plugins/graphics" }
savegame = { path = "src/plugins/savegame" }
settings = { path = "src/plugins/settings" }
skills = { path = "src/plugins/skills" }

[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 0

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package]
name = "project-zyheeda"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_rapier3d.workspace = true
fluent.workspace = true
fluent-syntax.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
unic-langid.workspace = true
uuid.workspace = true

# internal
animations.workspace = true
bars.workspace = true
behaviors.workspace = true
camera_control.workspace = true
common.workspace = true
enemy.workspace = true
frame_limiter.workspace = true
game_state.workspace = true
interactions.workspace = true
children_assets_dispatch.workspace = true
life_cycles.workspace = true
light.workspace = true
loading.workspace = true
localization.workspace = true
macros.workspace = true
map_generation.workspace = true
menu.workspace = true
path_finding.workspace = true
player.workspace = true
prefabs.workspace = true
graphics.workspace = true
savegame.workspace = true
settings.workspace = true
skills.workspace = true

[dev-dependencies]
mockall.workspace = true
test-case.workspace = true
