[package]
name = "zyheeda_core"
version.workspace = true
edition.workspace = true

[dependencies]
# external
serde.workspace = true
tracing.workspace = true

# internal
macros.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
serde_json.workspace = true
test-case.workspace = true
testing.workspace = true
