[package]
name = "behaviors"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier3d.workspace = true
tracing.workspace = true
animations.workspace = true
bars.workspace = true
common.workspace = true
gravity.workspace = true
interactions.workspace = true
light.workspace = true
prefabs.workspace = true

[dev-dependencies]
mockall.workspace = true
