[package]
name = "behaviors"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
tracing.workspace = true

# internal
animations.workspace = true
bars.workspace = true
common.workspace = true
interactions.workspace = true
light.workspace = true
prefabs.workspace = true
shaders.workspace = true

[dev-dependencies]
# external
mockall.workspace = true

# internal
macros.workspace = true
