[package]
name = "behaviors"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
tracing.workspace = true

# internal
common.workspace = true
macros.workspace = true
zyheeda_core.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
testing.workspace = true
test-case.workspace = true
serde_json.workspace = true
