[package]
name = "camera_control"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

# internal
common.workspace = true
macros.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
test-case.workspace = true

#internal
testing.workspace = true
