[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
macros.workspace = true

[dev-dependencies]
mockall.workspace = true
macros.workspace = true
common.workspace = true
