[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
unic-langid.workspace = true
uuid.workspace = true

# internal
macros.workspace = true
zyheeda_core.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
test-case.workspace = true

# internal
common.workspace = true
testing.workspace = true
