[package]
name = "game_state"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier3d.workspace = true
animations.workspace = true
bars.workspace = true
behaviors.workspace = true
common.workspace = true
enemy.workspace = true
interactions.workspace = true
light.workspace = true
menu.workspace = true
player.workspace = true
