[package]
name = "game_state"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true

# internal
behaviors.workspace = true
common.workspace = true
enemy.workspace = true
loading.workspace = true
menu.workspace = true
player.workspace = true
