[package]
name = "items"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
serde.workspace = true
uuid.workspace = true

# internal
common.workspace = true
loading.workspace = true

[dev-dependencies]
# external
mockall.workspace = true

# internal
macros.workspace = true
