[package]
name = "light"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
uuid.workspace = true

# internal
common.workspace = true
macros.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
