[package]
name = "loading"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true

# internal
common.workspace = true
macros.workspace = true

[dev-dependencies]
# external
mockall.workspace = true

# internal
testing.workspace = true
