[package]
name = "localization"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
fluent.workspace = true
fluent-syntax.workspace = true
unic-langid.workspace = true

# internal
common.workspace = true

[dev-dependencies]
# external
mockall.workspace = true

# internal
macros.workspace = true
testing.workspace = true
