[package]
name = "map_generation"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier3d.workspace = true
uuid.workspace = true
common.workspace = true
light.workspace = true
prefabs.workspace = true

[dev-dependencies]
mockall.workspace = true
macros.workspace = true
