[package]
name = "map_generation"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
uuid.workspace = true
serde.workspace = true
test-case.workspace = true

# internal
common.workspace = true

[dev-dependencies]
# external
mockall.workspace = true

# internal
macros.workspace = true
