[package]
name = "menu"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
tracing.workspace = true
uuid.workspace = true

# internal
macros.workspace = true
common.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
test-case.workspace = true

# internal
testing.workspace = true
