[package]
name = "physics"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d = "0.30.0"
serde.workspace = true
tracing.workspace = true

# internal
common.workspace = true
macros.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
test-case.workspace = true

# internal
testing.workspace = true
