[package]
name = "player"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true

# internal
bars.workspace = true
behaviors.workspace = true
common.workspace = true
interactions.workspace = true
light.workspace = true
prefabs.workspace = true
