[package]
name = "savegame"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

# internal
common.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
macros.workspace = true
test-case.workspace = true

# internal
testing.workspace = true
