[package]
name = "settings"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
serde.workspace = true
serde_json.workspace = true

# internal
common.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
test-case.workspace = true

# internal
macros.workspace = true
