[package]
name = "skills"
version.workspace = true
edition.workspace = true

[dependencies]
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true
animations.workspace = true
behaviors.workspace = true
common.workspace = true
interactions.workspace = true

[dev-dependencies]
mockall.workspace = true
macros.workspace = true
