[package]
name = "skills"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

# internal
behaviors.workspace = true
common.workspace = true
interactions.workspace = true
items.workspace = true
loading.workspace = true
macros.workspace = true
player.workspace = true
shaders.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
