[package]
name = "skills"
version.workspace = true
edition.workspace = true

[dependencies]
# external
bevy.workspace = true
bevy_rapier3d.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true

# internal
behaviors.workspace = true
common.workspace = true
loading.workspace = true
macros.workspace = true
player.workspace = true

[dev-dependencies]
# external
mockall.workspace = true
